# SentimentAnalysis

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
src/engineer/: __init__.py
src/engineer/datasets/: __init__.py  load_datasets.py
src/engineer/student/: __init__.py  convert_model_onnx.py  model_onnx.py  model_student.py  update_model_student.py
src/engineer/teacher/: __init__.py  model_teacher.py  update_model_teacher.py
src/evalute/: __init__.py  model_evalute.py  model_onnx_evalute.py
src/functions_active/: __init__.py  functions_basics.py
src/infrastructure/: __init__.py  student_accuracy.json  teacher_accuracy.json
src/pipe/: __init__.py  pipelines.py
src/settings/: setting.py
src/step/: ELT.py
